test changes working?

--- a/home-1.html
+++ b/home-1.html
@@ -80,25 +80,25 @@
                     <div class="row">
                         <div class="col-xl-5">
 
-                                            <nav class="mil-footer-menu mil-mb-60">
-                                                <ul>
-                                                    <li class="mil-up mil-active">
-                                                        <a href="home-1.html">Home</a>
-                                                    </li>
-                                                    <li class="mil-up">
-                                                        <a href="portfolio-1.html">Portfolio</a>
-                                                    </li>
-                                                    <li class="mil-up">
-                                                        <a href="services.html">Services</a>
-                                                    </li>
-                                                    <li class="mil-up">
-                                                        <a href="contact.html">Contact</a>
-                                                    </li>
-                                                    <li class="mil-up">
-                                                        <a href="blog.html">Blog</a>
-                                                    </li>
-                                                </ul>
-                                            </nav>
+                            <nav class="mil-main-menu" id="swupMenu">
+                                <ul>
+                                    <li class="mil-up mil-active">
+                                        <a href="home-1.html">Home</a>
+                                    </li>
+                                    <li class="mil-up">
+                                        <a href="portfolio-1.html">Portfolio</a>
+                                    </li>
+                                    <li class="mil-up">
+                                        <a href="services.html">Services</a>
+                                    </li>
+                                    <li class="mil-up">
+                                        <a href="contact.html">Contact</a>
+                                    </li>
+                                    <li class="mil-up">
+                                        <a href="blog.html">Blog</a>
+                                    </li>
+                                </ul>
+                            </nav>
 
                         </div>
                         <div class="col-xl-7">
@@ -167,13 +167,13 @@
         <!-- menu -->
         
         <!-- curtain -->
-        <div class="mil-curtain"></div>
+        <!-- <div class="mil-curtain"></div> -->
         <!-- curtain end -->
 
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">A.</a>
+                <a href="home-1.html" class="mil-logo">FoodOnFocus</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
