--- a/home-1.html
+++ b/home-1.html
@@ -45,14 +45,14 @@
         <div class="mil-preloader">
             <div class="mil-preloader-animation">
                 <div class="mil-pos-abs mil-animation-1">
-                    <p class="mil-h3 mil-muted mil-thin">Pioneering</p>
-                    <p class="mil-h3 mil-muted">Creative</p>
-                    <p class="mil-h3 mil-muted mil-thin">Excellence</p>
+                    <p class="mil-h3 mil-dark mil-thin">Pioneering</p>
+                    <p class="mil-h3 mil-dark">Creative</p>
+                    <p class="mil-h3 mil-dark mil-thin">Excellence</p>
                 </div>
                 <div class="mil-pos-abs mil-animation-2">
                     <div class="mil-reveal-frame">
-                        <p class="mil-reveal-box"></p>
-                        <p class="mil-h3 mil-muted mil-thin">FoodOnFocus.com</p>
+                        <p class="mil-reveal-box"></p>  
+                        <p class="mil-h3 mil-red mil-thin">FoodOnFocus.com</p>
                     </div>
                 </div>
             </div>
