nav bar white fix

--- a/home-1.html
+++ b/home-1.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
 
-
-<!-- Mirrored from miller.bslthemes.com/ashley-demo/home-1.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 04 May 2024 11:02:22 GMT -->
 <head>
 
     <meta charset="UTF-8">
@@ -72,7 +70,7 @@
             <!-- frame clone -->
             <div class="mil-frame-top">
                 <a href="home-1.html" class="mil-logo"><img class="custlogo" src="img/base/FNF LOGO NEW.png" alt="fnflogo"></a>
-                <div class="mil-menu-btn">
+                <div class="mil-menu-btn" style="background: balck;">
                     <span></span>
                 </div>
             </div>
@@ -913,6 +911,4 @@
 
 </body>
 
-
-<!-- Mirrored from miller.bslthemes.com/ashley-demo/home-1.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 04 May 2024 11:02:22 GMT -->
 </html>
