--- a/test.html
+++ b/test.html
@@ -1,121 +1,75 @@
-<!DOCTYPE html>
-<!-- Coding By CodingNepal - codingnepalweb.com -->
-<html lang="en" dir="ltr">
-<head>
-  <meta charset="UTF-8">
-  <title>All Navigation Menu Hover Animation | CodingLab</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<style>
-/* Google Fonts Import Link */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+.wrapper {
+  position: fixed;
+  bottom: 50px;
+  right: -370px;
+  max-width: 345px;
+  width: 100%;
+  background: #fff;
+  border-radius: 8px;
+  padding: 15px 25px 22px;
+  transition: right 1s ease;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  z-index: 9999;
 }
-
-body {
-  height: 100vh;
+.wrapper.show {
+  right: 20px;
+}
+.wrapper header {
   display: flex;
   align-items: center;
-  justify-content: center;
-  background: #c1f7f5;
+  column-gap: 15px;
 }
-
-header {
-  display: flex;
-  align-items: center;
-  background: rgba(39, 37, 37, 0.5); /* Black color overlay */
-  padding: 20px;
-  border-radius: 12px;
-  box-shadow: 0 5px 10px #000000f1;
-  backdrop-filter: blur(10px); /* Glass morphic effect */
-}
-
-.logo {
-  margin-right: 20px;
-}
-
-.nav-links {
-  display: flex;
-  align-items: center;
-}
-
-.nav-links li {
-  list-style: none;
-  margin: 0 12px;
-}
-
-.nav-links li a {
-  position: relative;
-  color: #fff; /* White text color */
-  font-size: 20px;
+/* header i {
+  color: #4070f4;
+  font-size: 32px;
+} */
+header h2 {
+  color: black;
   font-weight: 500;
-  padding: 6px 0;
+}
+.wrapper .data {
+  margin-top: 16px;
+}
+.wrapper .data p {
+  color: #333;
+  font-size: 16px;
+}
+.data p a {
+  color: #4070f4;
   text-decoration: none;
 }
-
-.nav-links li a:before {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 3px;
-  width: 0%;
-  background: #34efdf;
-  border-radius: 12px;
-  transition: all 0.4s ease;
+.data p a:hover {
+  text-decoration: underline;
 }
-
-.nav-links li a:hover:before {
+.wrapper .buttons {
+  margin-top: 16px;
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-
-.nav-links li.center a:before {
-  left: 50%;
-  transform: translateX(-50%);
+.buttons .button {
+  border: none;
+  color: #fff;
+  padding: 8px 0;
+  border-radius: 4px;
+  background: rgb(255, 152, 0);
+  cursor: pointer;
+  width: calc(100% / 2 - 10px);
+  transition: all 0.2s ease;
 }
-
-.nav-links li.upward a:before {
-  width: 100%;
-  bottom: -5px;
-  opacity: 0;
+.buttons #acceptBtn:hover {
+  background-color: rgb(255, 152, 0);
 }
-
-.nav-links li.upward a:hover:before {
-  bottom: 0px;
-  opacity: 1;
+#declineBtn {
+  border: 2px solid rgb(255, 152, 0);
+  background-color: #fff;
+  color: rgb(255, 152, 0);
 }
-
-.nav-links li.forward a:before {
-  width: 100%;
-  transform: scaleX(0);
-  transform-origin: right;
-  transition: transform 0.4s ease;
+#declineBtn:hover {
+  background-color: rgb(255, 152, 0);
+  color: #fff;
 }
-
-.nav-links li.forward a:hover:before {
-  transform: scaleX(1);
-  transform-origin: left;
+.cookietxt{
+  font-size: 1.5em;
 }
-
-</style>
-
-<body>
-  <header>
-    <div class="logo">
-      <img src="logo.png" alt="Logo">
-    </div>
-    <ul class="nav-links">
-      <li><a href="#">Dashboard</a></li>
-      <li class="center"><a href="#">Portfolio</a></li>
-      <li class="upward"><a href="#">Services</a></li>
-      <li class="forward"><a href="#">Feedback</a></li>
-    </ul>
-  </header>
-</body>
-</html>
