--- a/home-1.html
+++ b/home-1.html
@@ -299,50 +299,53 @@
             </div>
 
             <script>
-                $(document).ready(function () {
-                    // Check if the popup has been displayed before
-                    var popupDisplayed = getCookie("popupDisplayed");
+   $(document).ready(function() {
+    // Check if the user has previously accepted or declined the cookie consent
+    var cookieConsentStatus = sessionStorage.getItem("cookieConsentStatus");
+    var popupDisplayed = getCookie("popupDisplayed");
 
-                    // If the popup hasn't been displayed yet, show it
-                    if (!popupDisplayed) {
-                        $(".wrapper").show();
-                    }
+    // If the user has not previously accepted or declined the cookie consent, and the popup hasn't been displayed
+    if (!cookieConsentStatus && !popupDisplayed) {
+        $(".wrapper").show(); // Show the popup
+    }
 
-                    // Event listener for accept button
-                    $("#acceptBtn").click(function () {
-                        $(".wrapper").hide(); // Hide the popup
-                        setCookie("popupDisplayed", true, 1); // Set cookie to expire in 1 day
-                    });
+    // Event listener for accept button
+    $("#acceptBtn").click(function() {
+        $(".wrapper").hide(); // Hide the popup
+        sessionStorage.setItem("cookieConsentStatus", "accepted"); // Set consent status to accepted
+        setCookie("popupDisplayed", true, 1); // Set cookie to expire in 1 day
+    });
 
-                    // Event listener for decline button
-                    $("#declineBtn").click(function () {
-                        $(".wrapper").hide(); // Hide the popup
-                        setCookie("popupDisplayed", true, 1); // Set cookie to expire in 1 day
-                    });
-                });
+    // Event listener for decline button
+    $("#declineBtn").click(function() {
+        $(".wrapper").hide(); // Hide the popup
+        sessionStorage.setItem("cookieConsentStatus", "declined"); // Set consent status to declined
+        setCookie("popupDisplayed", true, 1); // Set cookie to expire in 1 day
+    });
+});
 
-                // Function to set cookie
-                function setCookie(name, value, days) {
-                    var expires = "";
-                    if (days) {
-                        var date = new Date();
-                        date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
-                        expires = "; expires=" + date.toUTCString();
-                    }
-                    document.cookie = name + "=" + (value || "") + expires + "; path=/";
-                }
+// Function to set cookie
+function setCookie(name, value, days) {
+    var expires = "";
+    if (days) {
+        var date = new Date();
+        date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+        expires = "; expires=" + date.toUTCString();
+    }
+    document.cookie = name + "=" + (value || "") + expires + "; path=/";
+}
 
-                // Function to get cookie
-                function getCookie(name) {
-                    var nameEQ = name + "=";
-                    var ca = document.cookie.split(';');
-                    for (var i = 0; i < ca.length; i++) {
-                        var c = ca[i];
-                        while (c.charAt(0) == ' ') c = c.substring(1, c.length);
-                        if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
-                    }
-                    return null;
-                }
+// Function to get cookie
+function getCookie(name) {
+    var nameEQ = name + "=";
+    var ca = document.cookie.split(';');
+    for (var i = 0; i < ca.length; i++) {
+        var c = ca[i];
+        while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+        if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+    }
+    return null;
+}
 
             </script>
 
