--- a/test.html
+++ b/test.html
@@ -1,18 +1,111 @@
+                <!-- cookie -->
+
+                <div class="wrapper" id="cookieWrapper">
+                  <header>
+                      <i class="bx bx-cookie"></i>
+                      <h2 class="cookietxt">Cookies Consent</h2>
+                  </header>
+
+                  <div class="data">
+                      <p>"Our website uses cookies to enhance your browsing experience, even though we're not a
+                          bakery. 😊" </p>
+                  </div>
+
+                  <div class="buttons">
+                      <button class="button" id="acceptBtn" href="">Accept</button>
+                      <button class="button" id="declineBtn" href="">Decline</button>
+                  </div>
+              </div>
+          </div>
+
+          <script>
+ $(document).ready(function() {
+  // Check if the user has previously accepted or declined the cookie consent
+  var cookieConsentStatus = sessionStorage.getItem("cookieConsentStatus");
+  var popupDisplayed = getCookie("popupDisplayed");
+
+  // If the user has not previously accepted or declined the cookie consent, and the popup hasn't been displayed
+  if (!cookieConsentStatus && !popupDisplayed) {
+      $(".wrapper").show(); // Show the popup
+  }
+
+  // Event listener for accept button
+  $("#acceptBtn").click(function() {
+      $(".wrapper").hide(); // Hide the popup
+      sessionStorage.setItem("cookieConsentStatus", "accepted"); // Set consent status to accepted
+      setCookie("popupDisplayed", true, 1); // Set cookie to expire in 1 day
+  });
+
+  // Event listener for decline button
+  $("#declineBtn").click(function() {
+      $(".wrapper").hide(); // Hide the popup
+      sessionStorage.setItem("cookieConsentStatus", "declined"); // Set consent status to declined
+      setCookie("popupDisplayed", true, 1); // Set cookie to expire in 1 day
+  });
+});
+
+// Function to set cookie
+function setCookie(name, value, days) {
+  var expires = "";
+  if (days) {
+      var date = new Date();
+      date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+      expires = "; expires=" + date.toUTCString();
+  }
+  document.cookie = name + "=" + (value || "") + expires + "; path=/";
+}
+
+// Function to get cookie
+function getCookie(name) {
+  var nameEQ = name + "=";
+  var ca = document.cookie.split(';');
+  for (var i = 0; i < ca.length; i++) {
+      var c = ca[i];
+      while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+      if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+  }
+  return null;
+}
+
+          </script>
+
+
+
+style--
+/* cookie popup css */
+/* Google Fonts - Poppins */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+
 .wrapper {
   position: fixed;
   bottom: 50px;
-  right: -370px;
+  left: 50%;
+  transform: translateX(-50%);
   max-width: 345px;
   width: 100%;
   background: #fff;
   border-radius: 8px;
   padding: 15px 25px 22px;
-  transition: right 1s ease;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   z-index: 9999;
+  display: none;
+}
+
+.preloader-complete .wrapper {
+  display: block; 
+
+}
+@keyframes fadeIn {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
 }
 .wrapper.show {
   right: 20px;
+  
 }
 .wrapper header {
   display: flex;
@@ -72,4 +165,99 @@ header h2 {
 }
 .cookietxt{
   font-size: 1.5em;
+}
+
+script---
+
+// cookie js
+const cookieBox = document.querySelector(".wrapper"),
+  buttons = document.querySelectorAll(".button");
+
+const executeCodes = () => {
+  //if cookie contains codinglab it will be returned and below of this code will not run
+  if (document.cookie.includes("codinglab")) return;
+  cookieBox.classList.add("show");
+
+  buttons.forEach((button) => {
+    button.addEventListener("click", () => {
+      cookieBox.classList.remove("show");
+
+      //if button has acceptBtn id
+      if (button.id == "acceptBtn") {
+        //set cookies for 1 month. 60 = 1 min, 60 = 1 hours, 24 = 1 day, 30 = 30 days
+        document.cookie = "cookieBy= codinglab; max-age=" + 60 * 60 * 24 * 30;
+      }
+    });
+  });
+};
+
+//executeCodes function will be called on webpage load
+window.addEventListener("load", executeCodes);
+
+document.addEventListener("DOMContentLoaded", function() {
+    // Check if the user has previously accepted or declined the cookie consent
+    var cookieConsentStatus = sessionStorage.getItem("cookieConsentStatus");
+
+    // If the user has not previously accepted or declined the cookie consent, and the preloader animation completes
+    if (!cookieConsentStatus) {
+        setTimeout(function() {
+            document.body.classList.add("preloader-complete");
+            document.getElementById("cookieWrapper").style.display = "block"; // Show cookie wrapper
+        }, 6000); // Adjust time as needed
+    }
+
+    // Get reference to accept and decline buttons
+    var acceptBtn = document.getElementById("acceptBtn");
+    var declineBtn = document.getElementById("declineBtn");
+
+    // Add event listener to accept button
+    acceptBtn.addEventListener("click", function() {
+        document.getElementById("cookieWrapper").style.display = "none"; // Hide cookie wrapper
+        sessionStorage.setItem("cookieConsentStatus", "accepted"); // Set consent status to accepted
+    });
+
+    // Add event listener to decline button
+    declineBtn.addEventListener("click", function() {
+        document.getElementById("cookieWrapper").style.display = "none"; // Hide cookie wrapper
+        sessionStorage.setItem("cookieConsentStatus", "declined"); // Set consent status to declined
+    });
+});
+
+// Clear sessionStorage when leaving the page
+window.addEventListener("unload", function() {
+    sessionStorage.removeItem("cookieConsentStatus");
+});
+
+
+   // Function to check and show the popup only once
+   function showPopupOnce() {
+    var popupDisplayed = getCookie("popupDisplayed");
+    if (!popupDisplayed) {
+        $("#popup").show();
+        setCookie("popupDisplayed", true, 1); // Set cookie to expire in 1 day
+    }
+}
+});
+
+// Function to set cookie
+function setCookie(name, value, days) {
+var expires = "";
+if (days) {
+    var date = new Date();
+    date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+    expires = "; expires=" + date.toUTCString();
+}
+document.cookie = name + "=" + (value || "") + expires + "; path=/";
+}
+
+// Function to get cookie
+function getCookie(name) {
+var nameEQ = name + "=";
+var ca = document.cookie.split(';');
+for (var i = 0; i < ca.length; i++) {
+    var c = ca[i];
+    while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+    if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+}
+return null;
 }
