--- a/home-1.html
+++ b/home-1.html
@@ -27,6 +27,9 @@
 
     <!-- page name -->
     <title>FoodOnFocus</title>
+    <!-- icon -->
+    <link rel="icon" href="img/base/FNFico.ico" type="image/x-icon">
+
 
 </head>
 
@@ -462,7 +465,7 @@
                         <div class="mil-animation-frame">
                             <div class="mil-animation mil-position-4 mil-dark mil-scale" data-value-1="1" data-value-2="2" style="top: -60px; right: -4px;"></div>
                         </div>
-                        <h2 class="mil-up mil-mb-60">‎ ‎ ‎ Our Projects</h2>
+                        <h2 class="mil-up mil-mb-60">‎ ‎ Our Projects</h2>
                         <div class="container">
                             <div class="row align-items-end">
                                 <div class="col-lg-9">
