--- a/home-1.html
+++ b/home-1.html
@@ -1052,31 +1052,62 @@
 
                 <!-- contact form -->
                 <section id="contact">
-                    <div class="container ">
-                        <!-- <h3 class="mil-center mil-up mil-mb-120">Let's <span class="mil-thin">Talk</span></h3> -->
-                        <form class="row align-items-center">
-                            <div class="col-lg-6 mil-up">
-                                <input type="text" placeholder="What's your name">
+                    <div class="container">
+                        <div class="row align-items-center">
+                            <div class="col-lg-6">
+                                <!-- Left side with image -->
+                                <img src="image-url" alt="Your Image" class="img-fluid">
                             </div>
-                            <div class="col-lg-6 mil-up">
-                                <input type="email" placeholder="Your Email">
+                            <div class="col-lg-6">
+                                <!-- Right side with form -->
+                                <form>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="What's your name">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" placeholder="Your Email">
+                                    </div>
+                                    <div class="form-group">
+                                        <textarea class="form-control" placeholder="Tell us about our project"></textarea>
+                                    </div>
+                                    <!-- Predefined options -->
+                                    <div class="form-group">
+                                        <label for="optionSelect">Select an option:</label>
+                                        <select class="form-control" id="optionSelect">
+                                            <option value="option1">Option 1</option>
+                                            <option value="option2">Option 2</option>
+                                            <option value="option3">Option 3</option>
+                                        </select>
+                                    </div>
+                                    <!-- Additional form elements -->
+                                    <div class="form-group">
+                                        <label for="optionRadio">Select one option:</label>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="optionRadio" id="optionRadio1" value="option1">
+                                            <label class="form-check-label" for="optionRadio1">
+                                                Option 1
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="optionRadio" id="optionRadio2" value="option2">
+                                            <label class="form-check-label" for="optionRadio2">
+                                                Option 2
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="optionRadio" id="optionRadio3" value="option3">
+                                            <label class="form-check-label" for="optionRadio3">
+                                                Option 3
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Send message</button>
+                                </form>
                             </div>
-                            <div class="col-lg-12 mil-up">
-                                <textarea placeholder="Tell us about our project"></textarea>
-                            </div>
-                            <div class="col-lg-8">
-                                <p class="mil-up mil-mb-30"><span class="mil-accent">*</span> We promise not to disclose your personal information to third parties.</p>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="mil-adaptive-right mil-up mil-mb-30">
-                                    <button type="submit" class="mil-button mil-arrow-place">
-                                        <span>Send message</span>
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
+                        </div>
                     </div>
                 </section>
+                
                 <!-- contact form end -->
 
             <!-- contact end -->
