--- a/home-1.html
+++ b/home-1.html
@@ -94,19 +94,19 @@
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
                                     <li class="mil-up mil-active mil-dark">
-                                        <a class="mil-dark" href="home-1.html">Home</a>
+                                        <a class="mil-dark" href="#.">Home</a>
                                     </li>
                                     <li class="mil-up mil-dark">
-                                        <a class="mil-dark" href="portfolio-1.html">Portfolio</a>
+                                        <a class="mil-dark" href="#.">Portfolio</a>
                                     </li>
                                     <li class="mil-up mil-dark">
-                                        <a class="mil-dark" href="services.html">Services</a>
+                                        <a class="mil-dark" href="#.">Services</a>
                                     </li>
                                     <li class="mil-up mil-dark">
-                                        <a class="mil-dark" href="contact.html">Contact</a>
+                                        <a class="mil-dark" href="#.">Contact</a>
                                     </li>
                                     <li class="mil-up mil-dark">
-                                        <a class="mil-dark" href="blog.html">Blog</a>
+                                        <a class="mil-dark" href="#.">Blog</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -128,17 +128,17 @@
                                             <h6 class="mil-dark mil-mb-30">Projects</h6>
 
                                             <ul class="mil-menu-list">
-                                                <li><a href="project-1.html" class="mil-light-dark">Interior design
+                                                <li><a href="#." class="mil-light-dark">Interior design
                                                         studio</a></li>
-                                                <li><a href="project-2.html" class="mil-light-dark">Home Security
+                                                <li><a href="#." class="mil-light-dark">Home Security
                                                         Camera</a></li>
-                                                <li><a href="project-3.html" class="mil-light-dark">Kemia Honest
+                                                <li><a href="#." class="mil-light-dark">Kemia Honest
                                                         Skincare</a></li>
-                                                <li><a href="project-4.html" class="mil-light-dark">Cascade of Lava</a>
+                                                <li><a href="#." class="mil-light-dark">Cascade of Lava</a>
                                                 </li>
-                                                <li><a href="project-5.html" class="mil-light-dark">Air Pro by
+                                                <li><a href="#." class="mil-light-dark">Air Pro by
                                                         Molekule</a></li>
-                                                <li><a href="project-6.html" class="mil-light-dark">Tony's
+                                                <li><a href="#." class="mil-light-dark">Tony's
                                                         Chocolonely</a></li>
                                             </ul>
 
@@ -1053,59 +1053,29 @@
 
                 <!-- contact form -->
                 <section id="contact">
-                    <div class="container">
-                        <div class="row align-items-center">
-                            <div class="col-lg-6">
-                                <!-- Left side with image -->
-                                <img src="image-url" alt="Your Image" class="img-fluid">
+                    <div class="container mil-p-120-90">
+                        <h3 class="mil-center mil-up mil-mb-120">Let's <span class="mil-thin">Talk</span></h3>
+                        <form class="row align-items-center">
+                            <div class="col-lg-6 mil-up">
+                                <input type="text" placeholder="What's your name">
                             </div>
-                            <div class="col-lg-6">
-                                <!-- Right side with form -->
-                                <form>
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="What's your name">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="Your Email">
-                                    </div>
-                                    <div class="form-group">
-                                        <textarea class="form-control" placeholder="Tell us about our project"></textarea>
-                                    </div>
-                                    <!-- Predefined options -->
-                                    <div class="form-group">
-                                        <label for="optionSelect">Select an option:</label>
-                                        <select class="form-control" id="optionSelect">
-                                            <option value="option1">Option 1</option>
-                                            <option value="option2">Option 2</option>
-                                            <option value="option3">Option 3</option>
-                                        </select>
-                                    </div>
-                                    <!-- Additional form elements -->
-                                    <div class="form-group">
-                                        <label for="optionRadio">Select one option:</label>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="optionRadio" id="optionRadio1" value="option1">
-                                            <label class="form-check-label" for="optionRadio1">
-                                                Option 1
-                                            </label>
-                                        </div>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="optionRadio" id="optionRadio2" value="option2">
-                                            <label class="form-check-label" for="optionRadio2">
-                                                Option 2
-                                            </label>
-                                        </div>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="optionRadio" id="optionRadio3" value="option3">
-                                            <label class="form-check-label" for="optionRadio3">
-                                                Option 3
-                                            </label>
-                                        </div>
-                                    </div>
-                                    <button type="submit" class="btn btn-primary">Send message</button>
-                                </form>
+                            <div class="col-lg-6 mil-up">
+                                <input type="email" placeholder="Your Email">
                             </div>
-                        </div>
+                            <div class="col-lg-12 mil-up">
+                                <textarea placeholder="Tell us about our project"></textarea>
+                            </div>
+                            <div class="col-lg-8">
+                                <p class="mil-up mil-mb-30"><span class="mil-accent">*</span> We promise not to disclose your personal information to third parties.</p>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="mil-adaptive-right mil-up mil-mb-30">
+                                    <button type="submit" class="mil-button mil-arrow-place">
+                                        <span>Send message</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </section>
                 
@@ -1143,16 +1113,16 @@
                                                     <a home-1.html>Home</a>
                                                 </li>
                                                 <li class="mil-up mil-dark">
-                                                    <a href="portfolio-1.html">Portfolio</a>
+                                                    <a href="#.">Portfolio</a>
                                                 </li>
                                                 <li class="mil-up">
-                                                    <a href="services.html">Services</a>
+                                                    <a href="#.">Services</a>
                                                 </li>
                                                 <li class="mil-up">
-                                                    <a href="contact.html">Contact</a>
+                                                    <a href="#.">Contact</a>
                                                 </li>
                                                 <li class="mil-up">
-                                                    <a href="blog.html">Blog</a>
+                                                    <a href="#.">Blog</a>
                                                 </li>
                                             </ul>
                                         </nav>
