changed theme added featured products

--- a/test-ali.html
+++ b/test-ali.html
@@ -1,42 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test ali</title>
-    <style>
-        .hover-text {
-    color: black;
-    transition: color 0.5s cubic-bezier(0.39, 0.58, 0.57, 1);
-    font-family: "Inter", "Inter Placeholder", sans-serif;
-    cursor: pointer;
-    font-size: 5.5rem;
-    font-weight: 900;
-    font-size: 2.5rem;
-    line-height: 150%;
-    background-image: url('img/photo/bg-69.jpg');
-    background-size: cover;
-    -webkit-background-clip: text;
-    background-clip: text;
-    background-position: 0% 100%; /* Start position of the background image (bottom) */
-    background-repeat: no-repeat;
-    position: relative;
-    width: fit-content;
-}
-
-.hover-text:hover {
-    color: transparent;
-    background-position: 0% 0%; /* End position of the background image (top) */
-}
-</style>
+    <title>Goned WEBSITE Portfolio</title>
+    <link rel="stylesheet" href="test.css">
 </head>
-
 <body>
-
-    <h1 class="hover-text">Branding and Desing Model</h1>
-
+    <div id="container-1">
+        <span>this is container 1</span>
+    </div>
+    <div id="container-fp">
+        <div class="primary-heading-box">
+            <h1>FEATURED WORKS </h1>
+        </div>
+        <div class="featured-works">
+            <div class="featured-work-box" id="feature-box-1">
+                <div class="image-box">
+                    <img src="img/works/1.jpg" class="featured-work-img" alt="">
+                </div>
+                <div class="work-head">
+                    <h5 class="feature-work-name">SLINGSHOT</h5>
+                </div>
+                <div class="featured-work-tags">
+                    <span class="featured-work-tag">WEBSITE</span>
+                    <span class="featured-work-tag">LOGO</span>
+                </div>
+            </div>
+            <div class="featured-work-box" id="feature-box-1">
+                <div class="image-box">
+                    <img src="img/works/1.jpg" class="featured-work-img" alt="">
+                </div>
+                <div class="work-head">
+                    <h5 class="feature-work-name">SLINGSHOT</h5>
+                </div>
+                <div class="featured-work-tags">
+                    <span class="featured-work-tag">WEBSITE</span>
+                    <span class="featured-work-tag">LOGO</span>
+                </div>
+            </div>
+            <div class="featured-work-box" id="feature-box-1">
+                <div class="image-box">
+                    <img src="img/works/1.jpg" class="featured-work-img" alt="">
+                </div>
+                <div class="work-head">
+                    <h5 class="feature-work-name">SLINGSHOT</h5>
+                </div>
+                <div class="featured-work-tags">
+                    <span class="featured-work-tag">WEBSITE</span>
+                    <span class="featured-work-tag">LOGO</span>
+                </div>
+            </div>
+            <div class="featured-work-box" id="feature-box-1">
+                <div class="image-box">
+                    <img src="img/works/1.jpg" class="featured-work-img" alt="">
+                </div>
+                <div class="work-head">
+                    <h5 class="feature-work-name">SLINGSHOT</h5>
+                </div>
+                <div class="featured-work-tags">
+                    <span class="featured-work-tag">WEBSITE</span>
+                    <span class="featured-work-tag">LOGO</span>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
-
 </html>
