--- a/home-1.html
+++ b/home-1.html
@@ -244,7 +244,7 @@
                                     </div>
                                 </div>
 
-                                <a href="services.html" class="mil-button mil-arrow-place mil-btn-space">
+                                <a href="#." class="mil-button mil-arrow-place mil-btn-space">
                                     <span>What we do</span>
                                 </a>
                                 <!-- 
@@ -271,7 +271,7 @@
                                             </text>
                                         </g>
                                     </svg>
-                                    <a href="#about"
+                                    <a href="#projects"
                                         class="mil-button mil-arrow-place mil-icon-button mil-arrow-down"></a>
                                 </div>
 
@@ -284,7 +284,7 @@
 
 
 <!-- portfolio -->
-<section class="mil-portfolio-slider-frame">
+<section class="mil-portfolio-slider-frame" id="projects">
     <div class="mil-animation-frame">
         <div class="mil-animation mil-position-4 mil-dark mil-scale" data-value-1="1" data-value-2="2" style="top: -60px; right: -4px;"></div>
     </div>
