--- a/home-1.html
+++ b/home-1.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
     <!-- fancybox css -->
     <link rel="stylesheet" href="css/plugins/fancybox.min.css">
-    <!-- ashley scss -->
+    <!-- custom css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- fontawesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -1076,7 +1076,6 @@
 
                 <!-- featured Products -->
                 <div class="outer-container-fp">
-
                     <div id="container-fp">
                         <div class="primary-heading-box">
                             <h1>FEATURED WORKS </h1>
